<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yc_ui_fragment_tabhost</string>
    <string name="hello_world">Hello world!</string>
    <string name="main_tab_title_home">首页</string>
    <string name="main_tab_title_nearby">附近商家</string>
    <string name="main_tab_title_balance">最新余额</string>
    <string name="main_tab_title_settings">设置</string>

    <!--登录相关-->
    <string name="login_account_login">账号登录</string>
    <string name="login_card_id">卡号/手机号/邮箱</string>
    <string name="login_password">请填写密码</string>
    <string name="login">登录</string>
    <string name="login_forgot_password">忘记密码?</string>
    <!--绑定相关-->
    <string name="binding_title">安全手机绑定</string>
    <string name="binding_security_check">安全验证</string>
    <string name="binding_phone">&#032;&#062;&#032;绑定手机</string>
    <string name="binding_hint_phone_num">手机号</string>
    <string name="binding_hint_card_id">卡号</string>
    <string name="binding_send_verification_code">发送验证码</string>
    <string name="binding_hint_input_verification_code">请输入验证码</string>
    <string name="binding">绑定</string>
    <string name="binding_cannot_get_verification_code">收不到短信验证码？</string>
    <!--注册相关-->
    <string name="register">注册</string>
    <string name="register_title">立即注册</string>
    <string name="register_required">必填项*</string>
    <string name="register_hint_phone_num">手机号</string>
    <string name="register_get_verification_code">获取验证码</string>
    <string name="register_hint_input_verification_code">请输入验证码</string>
    <string name="register_hint_pwd">请输入6-32位数字字母组合作为密码</string>
    <string name="register_optional">选填项</string>
    <string name="register_hint_user_name">请输入您的姓名</string>
    <string name="register_hint_user_id">请输入您的身份证号</string>
    <string name="register_hint_user_addr">请输入详细地址</string>
    <string name="register_hint_select_province">选择省</string>
    <string name="register_hint_select_city">选择市</string>
    <string name="register_accept_terms">我已阅读并同意相关协议</string>
    <string name="register_terms">&#060;&#060;用户许可协议&#062;&#062;</string>
    <!--手势密码-->
    <string name="guesture_pwd_skip">跳过</string>

    <!-- 首页 -->
    <string name="home_actionbar_btn_search">搜索</string>
    <string name="home_actionbar_menu_pay">付款</string>
    <string name="search_hint">搜索商户/功能/地区</string>
    <string name="home_my_cards">我的券</string>
    <string name="home_own_cards">拥有的卡券</string>
    <string name="home_my_consumption">消费</string>
    <string name="home_recent_discount">近期优惠</string>
    <string name="home_charge">充值</string>
    <string name="home_qiangquan">今日抢券</string>
    <string name="home_activity">活动</string>
    <string name="home_try_lucky">试手气</string>
    <string name="home_point_mall">积分商城</string>
    <string name="home_yuanbao">元宝</string>
    <string name="home_property">物业</string>
    <string name="home_my_cs">我的客服</string>
    <string name="spaces">&#032;&#032;</string>

    <!-- 我的券 -->
    <string name="my_coupons">我的优惠券</string>
    <string name="usage_help">使用说明:</string>
    <string name="view_detail">查看详情</string>
    <string name="test_description">优惠券可用商铺：北国先天下，保北购物广场，东丽花行，北斗星餐厅，庆丰包子铺...</string>
    <string name="test_expire_date">有效期 2015-10-26 23:00 至 2015-11-10 23:00</string>

    <!--今日抢券-->
    <string name="snapup_coupons">今日抢券</string>
    <string name="snapup_coupons_now">立刻抢券</string>
    <string name="snapup_coupons_emtpy">抢完</string>
    <string name="snapup_coupons_unstarted">未开始</string>
    <string name="snapup_coupons_amount">数量</string>
    <string name="snapup_coupons_total">总数</string>
    <string name="snapup_coupons_remaining">剩余</string>
    <string name="snapup_coupons_dlg_congratu">恭喜您</string>
    <string name="snapup_coupons_dlg_btn">我知道了</string>
    <string name="test_snapup_coupons_name">十元优惠券</string>
    <string name="test_snapup_coupons_total">总数: 200张</string>
    <string name="test_snapup_coupons_remaining">剩余: 100张</string>

    <!--优惠券详情 -->
    <string name="coupon_detail">优惠券详情</string>
    <string name="coupon_usage_desc">优惠券使用说明</string>
    <string name="coupon_provider">使用商铺:</string>
    <string name="coupon_expired_date">有效期:</string>
    <string name="coupon_rule">使用规则:</string>
    <string name="test_coupon_name">5元优惠券</string>
    <string name="test_coupon_desc">满266元使用立减5元</string>
    <string name="test_coupon_expired_date">2015-10-26 23:00 至 2015-11-10 23:00</string>
    <string name="test_coupon_provider">北国先天下，保北购物广场，东丽花行，北斗星餐厅，庆丰包子铺...</string>
    <string name="test_coupon_rule">满266元以上商品或消费方可使用5元优惠券</string>

    <!--最新活动-->
    <string name="latest_activities">最新活动</string>
    <string name="latest_activities_desc">活动说明</string>
    <string name="latest_activities_date">活动时间</string>
    <string name="latest_activities_view_more">查看图文介绍</string>

    <!-- 消费 -->
    <string name="pay">消费</string>
    <string name="pay_description">消费说明</string>
    <string name="pay_hint">如果店铺有优惠折扣，付款时会自动抵扣</string>
    <string name="pay_auto_refresh">每分钟自动更新</string>
    <string name="pay_cancel">取消</string>

    <!--充值-->
    <string name="hint_card_id">卡号</string>
    <string name="hint_amount">金额(输入100的整数倍)</string>
    <string name="recharge_amount">充值金额</string>
    <string name="amount_100">100元</string>
    <string name="amount_200">200元</string>
    <string name="amount_300">300元</string>
    <string name="amount_500">500元</string>
    <string name="amount_1000">1000元</string>
    <string name="amount_2000">2000元</string>
    <string name="hint_recharge_more">多充可获得元宝</string>
    <string name="recharge_mode">支付方式</string>
    <string name="alipay">支付宝</string>
    <string name="hint_alipay">推荐有支付宝的用户使用</string>
    <string name="weichat">微信</string>
    <string name="hint_weichat">推荐安装微信5.0及以上版报本的用户使用</string>

    <!--Messages-->
    <string name="load">加载中...</string>
    <string name="load_failed">加载失败,请稍候重试!</string>
    <string name="no_more_to_load">全部加载完毕</string>

    <!--Nearby-->
    <string name="test_shop_title">比尔斯烤肉自助</string>
    <string name="test_shop_discount">促销</string>
    <string name="test_shop_address">南市区保定百货大楼(裕华西路39号北京大厦)</string>
    <string name="test_shop_category">自助 烧烤 涮锅</string>

    <!--Balance-->
    <string name="balance">账户余额</string>
    <string name="amount">账户总金额(元)</string>
    <string name="recharge_history">充值记录</string>
    <string name="recharge">充值</string>
    <string name="my_points">我的积分</string>
    <string name="my_ingots">我的元宝</string>
    <string name="balance_description">使用积分和元宝可兑换优惠券和商品</string>

    <!-- Settings -->
    <string name="settings">设置</string>
    <string name="general_info">基本信息</string>
    <string name="change_pwd">修改密碼</string>
    <string name="shop_history">购买历史</string>
    <string name="points_exchange_history">积分兑换记录</string>
    <string name="ingots_exchange_history">元宝兑换记录</string>
    <string name="app_settings">软件设置</string>
    <string name="check_updates">更新</string>
    <string name="help">帮助</string>
    <string name="about">关于我们</string>
</resources>
